--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,26 @@
 
 html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
 
-canvas { display:block; } /* To remove the scrollbars */
+canvas { 
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+.score-board {
+  position: absolute;
+  width: 300px;
+  height: 150px;
+  z-index: 100;
+  background: none;
+  color: white;
+}
+
+.score-card {
+  display: flex;
+}
+
+.score-card__title {
+  margin-right: 10px;
+}
